--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,15 @@ html{
 body {
     font-size: 16px;
 }
+
+#divContainer {
+    max-width: 1000px;
+    margin: 10px auto;
+    background-color: aqua;
+}
+
+.cardapp {
+    width: 100px;
+    height: 100px;
+    aspect-ratio: 1 / 1;
+}
