--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* general */
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +10,28 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  background-image: url(../img/pexels-vlada-karpovich-4452397.jpg);
+  background-color: #f2e1c5;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+body h1 {
+  font-size: 200px;
+  mix-blend-mode: overlay;
+  font-family: "Permanent Marker", cursive;
+}
+
+.col img {
+  width: 200px;
+  opacity: 0.9;
+  margin: 5px;
+  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+}
+
+/* contenitori principali */
 #divContainer {
   width: 100%;
   height: 100vh;
@@ -15,24 +39,16 @@ html {
   margin: auto;
 }
 
-body {
-  background-image: url(../img/pexels-vlada-karpovich-4452397.jpg);
-  background-color: #fff;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-h1 {
-  font-size: 100px;
-}
-
 .cardapp {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   aspect-ratio: 1 / 1;
   transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1);
   font-size: 1em;
+}
+
+/* utility */
+.font-I {
   font-family: "Italiana", sans-serif;
   font-weight: 700;
 }
@@ -70,14 +86,4 @@ h1 {
 
 .scale4 {
   scale: 1.05;
-}
-
- .scroll_y {
-  color: brown;
-  transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-
-#section1{
-  width: 100%;
-  height: 100vh;
 }
